[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scenes/Title.gd" type="Script" id=1]
[ext_resource path="res://assets/images/space-background.png" type="Texture" id=2]
[ext_resource path="res://assets/images/titlescreen-spear.png" type="Texture" id=3]
[ext_resource path="res://assets/images/titlescreen-shield.png" type="Texture" id=4]
[ext_resource path="res://Tilesets/Cliffs.tres" type="TileSet" id=5]
[ext_resource path="res://assets/images/titlescreen-sky.png" type="Texture" id=6]
[ext_resource path="res://Entities/MapEntities/Mom.tscn" type="PackedScene" id=7]
[ext_resource path="res://Entities/MapEntities/Dad.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/images/protagonist.png" type="Texture" id=9]
[ext_resource path="res://assets/images/monsters/FinalBossHuman.png" type="Texture" id=10]
[ext_resource path="res://assets/images/monsters/Bandit.png" type="Texture" id=11]
[ext_resource path="res://assets/images/monsters/ArchMage.png" type="Texture" id=12]
[ext_resource path="res://assets/images/monsters/Humerus.png" type="Texture" id=13]
[ext_resource path="res://assets/images/monsters/FreezeFang.png" type="Texture" id=14]
[ext_resource path="res://assets/images/monsters/QueenSlime.png" type="Texture" id=15]
[ext_resource path="res://assets/images/titlescreen-text.png" type="Texture" id=16]
[ext_resource path="res://Entities/MapEntities/Jinn.tscn" type="PackedScene" id=17]
[ext_resource path="res://Theme/GlobalTheme.tres" type="Theme" id=18]
[ext_resource path="res://assets/images/dg-logo.png" type="Texture" id=19]

[node name="Node2D" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="V2" type="Node2D" parent="." index="0"]

editor/display_folded = true
visible = false

[node name="Background" type="Sprite" parent="V2" index="0"]

texture = ExtResource( 2 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Spear" type="Sprite" parent="V2" index="1"]

position = Vector2( 485, 184 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Shield" type="Sprite" parent="V2" index="2"]

position = Vector2( 546, 110 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="V3" type="Node2D" parent="." index="1"]

editor/display_folded = true
visible = false

[node name="TileMap" type="TileMap" parent="V3" index="0"]

mode = 0
tile_set = ExtResource( 5 )
cell_size = Vector2( 64, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 0, 2, 3, 1, 2, 4, 2, 2, 4, 3, 2, 4, 4, 2, 4, 5, 2, 4, 6, 2, 4, 7, 2, 4, 8, 2, 4, 9, 2, 4, 10, 2, 4, 11, 2, 4, 12, 2, 4, 13, 2, 4, 14, 2, 5, 65536, 2, 65539, 65537, 2, 65540, 65538, 2, 65540, 65539, 2, 65540, 65540, 2, 65540, 65541, 2, 65540, 65542, 2, 65540, 65543, 2, 65540, 65544, 2, 65540, 65545, 2, 65540, 65546, 2, 65540, 65547, 2, 65540, 65548, 2, 65540, 65549, 2, 65540, 65550, 2, 65541, 131072, 2, 65539, 131073, 2, 131076, 131074, 2, 131076, 131075, 2, 131076, 131076, 2, 131076, 131077, 2, 131076, 131078, 2, 131076, 131079, 2, 131076, 131080, 2, 65540, 131081, 2, 65540, 131082, 2, 65540, 131083, 2, 65540, 131084, 2, 65540, 131085, 2, 65540, 131086, 2, 65541, 196608, 2, 131075, 196609, 2, 131077, 196610, 0, 0, 196611, 0, 1, 196612, 0, 1, 196613, 0, 1, 196614, 0, 2, 196615, 2, 131075, 196616, 2, 131076, 196617, 2, 131076, 196618, 2, 131076, 196619, 2, 131076, 196620, 2, 131076, 196621, 2, 131076, 196622, 2, 65541, 262144, 0, 0, 262145, 0, 1, 262146, 0, 65537, 262147, 0, 65537, 262148, 0, 65537, 262149, 0, 65537, 262150, 0, 65537, 262151, 0, 1, 262152, 0, 1, 262153, 0, 1, 262154, 0, 1, 262155, 0, 1, 262156, 0, 2, 262157, 2, 131075, 262158, 2, 131077, 327680, 0, 65536, 327681, 0, 65537, 327682, 0, 65537, 327683, 0, 65537, 327684, 0, 65537, 327685, 0, 65537, 327686, 0, 65537, 327687, 0, 65537, 327688, 0, 65537, 327689, 0, 65537, 327690, 0, 65537, 327691, 0, 65537, 327692, 0, 65537, 327693, 0, 1, 327694, 0, 2, 393216, 0, 131072, 393217, 0, 131073, 393218, 0, 131073, 393219, 0, 131073, 393220, 0, 131073, 393221, 0, 131073, 393222, 0, 131073, 393223, 0, 131073, 393224, 0, 131073, 393225, 0, 131073, 393226, 0, 131073, 393227, 0, 131073, 393228, 0, 131073, 393229, 0, 131073, 393230, 0, 131074, 458752, 1, 196608, 458753, 1, 196609, 458754, 1, 196609, 458755, 1, 196609, 458756, 1, 196609, 458757, 1, 196609, 458758, 1, 196609, 458759, 1, 196609, 458760, 1, 196609, 458761, 1, 196609, 458762, 1, 196609, 458763, 1, 196609, 458764, 1, 196609, 458765, 1, 196609, 458766, 1, 196610, 524288, 1, 262144, 524289, 1, 262145, 524290, 1, 262145, 524291, 1, 262145, 524292, 1, 262145, 524293, 1, 262145, 524294, 1, 262145, 524295, 1, 262145, 524296, 1, 262145, 524297, 1, 262145, 524298, 1, 262145, 524299, 1, 262145, 524300, 1, 262145, 524301, 1, 262145, 524302, 1, 262146, 589824, 1, 327680, 589825, 1, 327681, 589826, 1, 327681, 589827, 1, 327681, 589828, 1, 327681, 589829, 1, 327681, 589830, 1, 327681, 589831, 1, 327681, 589832, 1, 327681, 589833, 1, 327681, 589834, 1, 327681, 589835, 1, 327681, 589836, 1, 327681, 589837, 1, 327681, 589838, 1, 327682 )

[node name="V4" type="Node2D" parent="." index="2"]

[node name="Spear" type="Sprite" parent="V4" index="0"]

position = Vector2( 485, 184 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Sky" type="Sprite" parent="V4" index="1"]

texture = ExtResource( 6 )
centered = false
_sections_unfolded = [ "Offset", "Rect", "Region", "Theme", "Transform" ]

[node name="TileMap" type="TileMap" parent="V4" index="2"]

mode = 0
tile_set = ExtResource( 5 )
cell_size = Vector2( 64, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 262144, 0, 393216, 262145, 0, 393217, 262146, 0, 393217, 262147, 0, 393217, 262148, 0, 393217, 262149, 0, 393217, 262150, 0, 393217, 262151, 0, 393217, 262152, 0, 393217, 262153, 0, 393217, 262154, 0, 393217, 262155, 0, 393217, 262156, 0, 393217, 262157, 0, 393217, 262158, 0, 393218, 327680, 0, 65536, 327681, 0, 65537, 327682, 0, 65537, 327683, 0, 65537, 327684, 0, 65537, 327685, 0, 65537, 327686, 0, 65537, 327687, 0, 65537, 327688, 0, 65537, 327689, 0, 65537, 327690, 0, 65537, 327691, 0, 65537, 327692, 0, 65537, 327693, 0, 65537, 327694, 0, 65538, 393216, 0, 65536, 393217, 0, 65537, 393218, 0, 65537, 393219, 0, 65537, 393220, 0, 65537, 393221, 0, 65537, 393222, 0, 65537, 393223, 0, 65537, 393224, 0, 65537, 393225, 0, 65537, 393226, 0, 65537, 393227, 0, 65537, 393228, 0, 65537, 393229, 0, 65537, 393230, 0, 65538, 458752, 0, 131072, 458753, 0, 131073, 458754, 0, 131073, 458755, 0, 131073, 458756, 0, 131073, 458757, 0, 131073, 458758, 0, 131073, 458759, 0, 131073, 458760, 0, 131073, 458761, 0, 131073, 458762, 0, 131073, 458763, 0, 131073, 458764, 0, 131073, 458765, 0, 131073, 458766, 0, 131074, 524288, 1, 196608, 524289, 1, 196609, 524290, 1, 196609, 524291, 1, 196609, 524292, 1, 196609, 524293, 1, 196609, 524294, 1, 196609, 524295, 1, 196609, 524296, 1, 196609, 524297, 1, 196609, 524298, 1, 196609, 524299, 1, 196609, 524300, 1, 196609, 524301, 1, 196609, 524302, 1, 196610, 589824, 1, 327680, 589825, 1, 327681, 589826, 1, 327681, 589827, 1, 327681, 589828, 1, 327681, 589829, 1, 327681, 589830, 1, 327681, 589831, 1, 327681, 589832, 1, 327681, 589833, 1, 327681, 589834, 1, 327681, 589835, 1, 327681, 589836, 1, 327681, 589837, 1, 327681, 589838, 1, 327682 )

[node name="Mama" parent="V4" index="3" instance=ExtResource( 7 )]

position = Vector2( 220, 310 )

[node name="Baba" parent="V4" index="4" instance=ExtResource( 8 )]

position = Vector2( 150, 310 )

[node name="Aisha" type="Sprite" parent="V4" index="5"]

position = Vector2( 220, 420 )
texture = ExtResource( 9 )
region_enabled = true
region_rect = Rect2( 64, 0, 64, 64 )
_sections_unfolded = [ "Region" ]

[node name="Mufsid" type="Sprite" parent="V4" index="6"]

position = Vector2( 795.817, 311.525 )
texture = ExtResource( 10 )
region_enabled = true
region_rect = Rect2( 64, 0, 64, 64 )
_sections_unfolded = [ "Region" ]

[node name="Monster" type="Sprite" parent="V4" index="7"]

position = Vector2( 738.682, 357.778 )
texture = ExtResource( 11 )
region_enabled = true
region_rect = Rect2( 64, 0, 64, 64 )
_sections_unfolded = [ "Region" ]

[node name="Monster2" type="Sprite" parent="V4" index="8"]

position = Vector2( 835.268, 387.706 )
texture = ExtResource( 12 )
region_enabled = true
region_rect = Rect2( 64, 0, 64, 64 )
_sections_unfolded = [ "Region" ]

[node name="Monster3" type="Sprite" parent="V4" index="9"]

position = Vector2( 779.493, 416.274 )
texture = ExtResource( 13 )
region_enabled = true
region_rect = Rect2( 64, 0, 64, 64 )
_sections_unfolded = [ "Region" ]

[node name="Monster4" type="Sprite" parent="V4" index="10"]

position = Vector2( 684.267, 450.283 )
texture = ExtResource( 14 )
region_enabled = true
region_rect = Rect2( 64, 0, 64, 64 )
_sections_unfolded = [ "Region" ]

[node name="Monster5" type="Sprite" parent="V4" index="11"]

position = Vector2( 858.395, 459.806 )
texture = ExtResource( 15 )
region_enabled = true
region_rect = Rect2( 64, 0, 64, 64 )
_sections_unfolded = [ "Region" ]

[node name="TitleText" type="Sprite" parent="." index="3"]

position = Vector2( 480, 125 )
texture = ExtResource( 16 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Jinn" parent="." index="4" instance=ExtResource( 17 )]

position = Vector2( 507, 73 )

[node name="VBoxContainer" type="VBoxContainer" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 410.0
margin_top = 283.0
margin_right = 550.0
margin_bottom = 465.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 16
alignment = 0
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "Size Flags", "custom_constants" ]

[node name="NewGameButton" type="Button" parent="VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 140.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 18 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "New Game"
flat = false
align = 1
_sections_unfolded = [ "Margin", "Theme", "custom_fonts" ]

[node name="LoadGameButton" type="Button" parent="VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 66.0
margin_right = 140.0
margin_bottom = 116.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Load"
flat = false
align = 1
_sections_unfolded = [ "Margin", "Theme", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="OptionsButton" type="Button" parent="VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 132.0
margin_right = 140.0
margin_bottom = 182.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Options"
flat = false
align = 1
_sections_unfolded = [ "Margin", "custom_colors", "custom_fonts" ]

[node name="Sprite" type="Sprite" parent="." index="6"]

position = Vector2( 480, 530 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 19 )
_sections_unfolded = [ "Offset", "Transform" ]

[connection signal="tree_exited" from="." to="." method="_on_Node2D_tree_exited"]

[connection signal="pressed" from="VBoxContainer/NewGameButton" to="." method="_on_newgame_Button_pressed"]

[connection signal="pressed" from="VBoxContainer/LoadGameButton" to="." method="_on_LoadGameButton_pressed"]

[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_Options_pressed"]


